# Snake

./: .gitignore  CMakeLists.txt  README.md  doxygenfile
include/: board.h  food.h  game.h  snake.h
src/: board.cpp  food.cpp  game.cpp  main.cpp  snake.cpp  snake.h
tests/: test.cpp  test_board.cpp  test_collision.cpp  test_food.cpp  test_snake.cpp
